//file:noinspection SpellCheckingInspection

plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

group 'cyder'
version '0.1.0'

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

for (it in tasks.withType(JavaCompile)) {
    it.options.compilerArgs.add('--enable-preview')
}

ext {
    annotationsVersion = '23.0.0'
    guavaVersion = '31.1-jre'
    gsonVersion = '2.10'
    jsoupVersion = '1.15.2'
    jlayerVersion = '1.0.1'
    javaulatorVersion = '3.0.3'
    commonsVersion = '3.12.0'
    commonsTextVersion = '1.9'
    httpClientVersion = '4.5.13'
    commonsIoVersion = '20030203.000550'
    inflectorVersion = '1.3'
    junitVersion = '5.9.1'
    zip4jVersion = '1.2.4'
    gravatarClientHash = '1e5e343'
}

dependencies {
    implementation 'org.jetbrains:annotations:' + annotationsVersion
    implementation 'com.google.guava:guava:' + guavaVersion
    implementation 'com.google.code.gson:gson:' + gsonVersion
    implementation 'org.jsoup:jsoup:' + jsoupVersion
    implementation 'javazoom:jlayer:' + jlayerVersion
    implementation 'com.fathzer:javaluator:' + javaulatorVersion
    implementation 'org.apache.commons:commons-lang3:' + commonsVersion
    implementation 'org.apache.commons:commons-text:' + commonsTextVersion
    implementation 'org.apache.httpcomponents:httpclient:' + httpClientVersion
    implementation 'commons-io:commons-io:' + commonsIoVersion
    implementation 'org.atteo:evo-inflector:' + inflectorVersion
    implementation 'org.junit.jupiter:junit-jupiter-api:' + junitVersion
    implementation 'net.lingala.zip4j:zip4j:' + zip4jVersion
    implementation 'com.github.nathancheshire:gravatarjavaclient:' + gravatarClientHash
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "16"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "16"
    }
}

build.dependsOn(compileJava, compileTestJava)
